@@ -7,6 +7,7 @@ Released on 2019-12-22
 - Improve display of grids in MODX3 to better fit with the gear icon
 - Better handle Error/Exceptions triggered by a task
 - Make sure modError service is loaded
+- Send an email when a task run fails [#14]
 
 Scheduler 1.1.0-pl
 ------------------
